[gd_scene load_steps=2 format=3 uid="uid://bq0r6dpjumyjn"]

[ext_resource type="Script" path="res://game/logic_in.gd" id="1_lk6hf"]

[node name="LogicIn" type="Sprite2D"]
script = ExtResource("1_lk6hf")

[node name="InputText" type="Label" parent="."]
anchors_preset = -1
offset_left = -5.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = 11.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="InputButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.313726)
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 12.0
